--- a/variables.ipynb
+++ b/variables.ipynb
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T01:41:54.536805Z",
-     "start_time": "2025-09-10T01:41:54.532337Z"
+     "end_time": "2025-09-13T22:24:52.128931Z",
+     "start_time": "2025-09-13T22:24:52.111922Z"
     }
    },
    "cell_type": "code",
@@ -91,11 +91,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n"
+      "<class 'int'>\n",
+      "<class 'float'>\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
